# pySTICS

./: .buildinfo  LICENSE  README.md  genindex.html  getting_started.html  index.html  list_of_variables.md  objects.inv  pyproject.toml  run_simulation.html  run_simulation.ipynb  search.html  searchindex.js
.doctrees/: environment.pickle  getting_started.doctree  index.doctree  run_simulation.doctree
.github/workflows/: ci.yml  documentation.yml  publish.yml
_sources/: getting_started.rst.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  run_simulation.nblink
meteo/: meteo_50.4_3.3_2014_2015.csv  meteo_50.4_5.3_2014_2015.csv
meteo/tmy/: meteo_50.4_2_2014_2015.csv
notebooks/: parametrization_methods.ipynb  run_pystics.py  run_pystics_simulation_stics_example.ipynb
parametrization_files/examples/: Auzeville.2012  Auzeville.2014  DurumWheat.obs  Fraise_tec.xml  Miscanthus.2006  Miscanthus.2013  Miscanthus.2014  Miscanthus.2015  Miscanthus_2007.obs  Miscanthus_2008.obs  Miscanthus_2008_tec.xml  Miscanthus_2009.obs  Miscanthus_2010.obs  Miscanthus_2013.obs  Miscanthus_2014.obs  Miscanthus_2015_tec.xml  Miscanthus_ini.xml  Prairie_tec.xml  Salade_tec.xml  Soja_tec.xml  Solnu_tec.xml  Toursol_tec.xml  banana.obs  bettera_ini.xml  ble1_tec.xml  ble_ini.xml  bledur_ini.xml  canne_ini.xml  cc_BristleOat.obs  cc_CrimsonClover_ini.xml  cc_CrimsonClover_tec.xml  cc_vetch.obs  cc_vetch_ini.xml  cc_vetch_tec.xml  chapaisj.2001  chapaisj_sta.xml  climat.txt  climbetj.1994  climbldj.2000  climbldj_sta.xml  (+55 more)
parametrization_files/plant_files/: DurumWheat_ACALOU_plt.xml  DurumWheat_MONTSEGUR_plt.xml  DurumWheat_NEFER_plt.xml  ItalianRyegrass_CoverCrop_plt.xml  Miscanthus_yr1_plt.xml  baresoil_plt.xml  corn_plt.xml  grass_plt.xml  mustard_CoverCrop_plt.xml  proto_banana_plt.xml  proto_fescue_plt.xml  proto_lettuce_plt.xml  proto_potato_plt.xml  proto_rice_plt.xml  proto_sorghum_plt.xml  proto_turmeric_plt.xml  proto_winterbarley_plt.xml  radish_plt.xml  rapeseed_plt.xml  sugarbeet_plt.xml  vine_CABFRA_plt.xml  vine_CHENIN_plt.xml  vine_GRENAC_plt.xml  vine_MERLOT_plt.xml  vine_PINCCH_plt.xml  vine_SYRAH_plt.xml  wheat_plt.xml
src/pystics/: __init__.py  exceptions.py  get_params.py  meteo.py  params.py  simulation.py  stics_daily.py  tasks.py  utils.py
tests/: test_meteo.py  test_module.py  test_run_pystics_simulation.py
(+170 files in other folders)
