[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystics"
dynamic = ["version"]
description = "STICS in Python"
authors = [{ name = "Etienne Perez", email = "eperez@ombrea.fr" }]
requires-python = ">=3.8, <3.12"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    "pandas",
    "matplotlib",
    "unidecode",
    "xmltodict",
]

[project.urls]
Homepage = "https://github.com/OmbreaPV/pySTICS"
Documentation = "https://OmbreaPV.github.io/pySTICS"

[project.optional-dependencies]
test = ["pytest>=5.0.0", "pytest-cov"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pystics/_version.py"

[tool.isort]
profile = "black"
known_first_party = "pystics"

[tool.black]
line_length = 88
target-version = ['py38']
